front end finished completely

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <nav class="navbar-container">
         <div class="logo">Lorem5</div>
+        <span class="nav-bars"><i class="fas fa-bars"></i></span>
         <ul class="links">
             <li class="items1">Home</li>
             <li class="items2">Contact</li>
@@ -55,13 +56,14 @@
 
 	<section class="grees-section">
 		<div class="green-area">
-			<i class="fab fa-html5"></i>
-			<i class="fas fa-random"></i>
-			<i class="fab fa-css3"></i>
+			<span class="icon"><i class="fab fa-html5"></i></span>
+			<span class="icon"><i class="fas fa-random"></i></span>			
+			<span class="icon"><i class="fab fa-css3"></i></span>
 		</div>
 	</section>
     
- <!--   <script src="http://100.69.165.58:8080/target/target-script-min.js#anonymous"></script>
-    -->
+    <!-- javascript -->
+ <!--   <script src="http://100.69.165.58:8080/target/target-script-min.js#anonymous"></script>  -->
+    <script src="script.js"></script>
 </body>
 </html>
